--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,13 @@
     <title>TC2005B</title>
 </head>
 <body>
-    <h1>Mi primera pagina web</h1>
-    <h4>Mi primera pagina web</h4>
+    <header><h1>Mi primera pagina HTML</h1></header>
+    <nav><ul>
+        <li>login</li>
+        <li>home</li>
+        <li>profile</li>
+    </ul></nav>
+
     
 </body>
 </html>
