--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,9 @@
 <body>
     <header><h1>Mi primera pagina HTML</h1></header>
     <nav><ul>
-        <li>login</li>
-        <li>home</li>
-        <li>profile</li>
+        <li><a href="./">Login</a></li>
+        <li><a href="./pages/home.html">home</a></li>
+        <li><a href="./pages/profile.html">profile</a></li>
     </ul></nav>
 
     
