--- a/public/pages/profile.html
+++ b/public/pages/profile.html
@@ -3,16 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
-    
+    <title>Profile</title>
 </head>
 <body>
-    <h1>Esta es la pagina Home</h1>
+    <h1>Pagina Profile</h1>
     <nav><ul>
         <li><a href="../index.html">Login</a></li>
-        <li><a href="./pages/home.html">home</a></li>
+        <li><a href="./home.html">home</a></li>
         <li><a href="./profile.html">profile</a></li>
     </ul></nav>
-    <img src="../images/figure.png" alt="">
+    
 </body>
 </html>
