Update image source in home.html to use JPEG format

--- a/public/pages/home.html
+++ b/public/pages/home.html
@@ -13,6 +13,6 @@
         <li><a href="./pages/home.html">home</a></li>
         <li><a href="./profile.html">profile</a></li>
     </ul></nav>
-    <img src="../images/figure.png" alt="">
+    <img src="../images/figure.jpeg" alt="">
 </body>
 </html>
