Refactor HTML structure in index.html and profile.html for consistency and improved navigation

--- a/public/index.html
+++ b/public/index.html
@@ -1,19 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TC2005B</title>
-</head>
-<body>
+  </head>
+  <body>
     <header><h1>Mi primera pagina HTML</h1></header>
-    <nav><ul>
+    <nav>
+      <ul>
         <li><a href="./">Login</a></li>
         <li><a href="./pages/home.html">home</a></li>
         <li><a href="./pages/profile.html">profile</a></li>
-    </ul></nav>
-    
+      </ul>
+    </nav>
 
-    
-</body>
+    <h2>Formulario de Login</h2>
+
+    <form action="">
+      <label for="">Username</label>
+      <input type="text" name="" id="" />
+      <label for="">Password</label>
+      <input type="password" name="" id="" />
+      <input type="button" name="" id="" value="Login" />
+    </form>
+  </body>
 </html>
