--- a/public/pages/profile.html
+++ b/public/pages/profile.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Profile</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Pagina Profile</h1>
-    <nav><ul>
+    <nav>
+      <ul>
         <li><a href="../index.html">Login</a></li>
         <li><a href="./home.html">home</a></li>
         <li><a href="./profile.html">profile</a></li>
-    </ul></nav>
-    
-</body>
+      </ul>
+    </nav>
+  </body>
 </html>
