Remove home.html and figure.jpeg; update navigation links and add tags.html page

--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,8 @@
     <header><h1>Mi primera pagina HTML</h1></header>
     <nav>
       <ul>
-        <li><a href="./">Login</a></li>
-        <li><a href="./pages/home.html">home</a></li>
+        <li><a href="#">Login</a></li>
+        <li><a href="./pages/tags.html">home</a></li>
         <li><a href="./pages/profile.html">profile</a></li>
       </ul>
     </nav>
@@ -22,7 +22,9 @@
       <input type="text" name="" id="" />
       <label for="">Password</label>
       <input type="password" name="" id="" />
-      <input type="button" name="" id="" value="Login" />
+      <a href="./pages/tags.html"
+        ><input type="button" name="" id="" value="Login"
+      /></a>
     </form>
   </body>
 </html>
