--- a/public/pages/profile.html
+++ b/public/pages/profile.html
@@ -10,9 +10,17 @@
     <nav>
       <ul>
         <li><a href="../index.html">Login</a></li>
-        <li><a href="./home.html">home</a></li>
-        <li><a href="./profile.html">profile</a></li>
+        <li><a href="./tags.html">home</a></li>
+        <li><a href="#">profile</a></li>
       </ul>
     </nav>
+
+    <div>
+      <h2>Sobre Mí</h2>
+      <p><strong>Nombre:</strong> Roberto Peiro</p>
+      <p><strong>Edad:</strong> 20</p>
+      <p><strong>Hobby:</strong> Salir con amigos y jugar videojuegos</p>
+      <img src="../images/imagen_rbd.JPG" alt="Foto de Perfil" width="300" />
+    </div>
   </body>
 </html>
