Update navigation links in index.html, profile.html, and tags.html for consistent capitalization

--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,8 @@
     <nav>
       <ul>
         <li><a href="#">Login</a></li>
-        <li><a href="./pages/tags.html">home</a></li>
-        <li><a href="./pages/profile.html">profile</a></li>
+        <li><a href="./pages/tags.html">Home</a></li>
+        <li><a href="./pages/profile.html">Profile</a></li>
       </ul>
     </nav>
 
