--- a/public/pages/profile.html
+++ b/public/pages/profile.html
@@ -10,8 +10,8 @@
     <nav>
       <ul>
         <li><a href="../index.html">Login</a></li>
-        <li><a href="./tags.html">home</a></li>
-        <li><a href="#">profile</a></li>
+        <li><a href="./tags.html">Home</a></li>
+        <li><a href="#">Profile</a></li>
       </ul>
     </nav>
 
