--- a/public/pages/tags.html
+++ b/public/pages/tags.html
@@ -10,8 +10,8 @@
     <nav>
       <ul>
         <li><a href="../index.html">Login</a></li>
-        <li><a href="#">home</a></li>
-        <li><a href="./profile.html">profile</a></li>
+        <li><a href="#">Home</a></li>
+        <li><a href="./profile.html">Profile</a></li>
       </ul>
     </nav>
     <div>
