Add CSS styles and update navigation links for consistency

--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./styles/style.css" />
     <title>TC2005B</title>
   </head>
   <body>
     <header><h1>Mi primera pagina HTML</h1></header>
     <nav>
       <ul>
-        <li><a href="#">Login</a></li>
+        <li>Login</li>
         <li><a href="./pages/tags.html">Home</a></li>
         <li><a href="./pages/profile.html">Profile</a></li>
       </ul>
