--- a/public/pages/profile.html
+++ b/public/pages/profile.html
@@ -3,15 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../styles/style.css" />
     <title>Profile</title>
   </head>
   <body>
-    <h1>Pagina Profile</h1>
+    <h1 id="profile_id">Pagina Profile</h1>
     <nav>
       <ul>
         <li><a href="../index.html">Login</a></li>
         <li><a href="./tags.html">Home</a></li>
-        <li><a href="#">Profile</a></li>
+        <li>Profile</li>
       </ul>
     </nav>
 
