--- a/public/pages/tags.html
+++ b/public/pages/tags.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../styles/style.css" />
     <title>Home</title>
   </head>
   <body>
@@ -10,18 +11,16 @@
     <nav>
       <ul>
         <li><a href="../index.html">Login</a></li>
-        <li><a href="#">Home</a></li>
+        <li>Home</li>
         <li><a href="./profile.html">Profile</a></li>
       </ul>
     </nav>
-    <div>
-      <p>Este es un texto en <strong>negrita</strong>.</p>
-      <p>Aquí hay un superíndice: 2<sup>3</sup> = 8</p>
-      <p>Aquí hay un subíndice: H<sub>2</sub>O</p>
-      <p>
-        Vamos a agregar un salto de línea:<br />Este texto está en una nueva
-        línea.
-      </p>
-    </div>
+    <p class="lorem">Este es un texto en <strong>negrita</strong>.</p>
+    <p>Aquí hay un superíndice: 2<sup>3</sup> = 8</p>
+    <p>Aquí hay un subíndice: H<sub>2</sub>O</p>
+    <p>
+      Vamos a agregar un salto de línea:<br />Este texto está en una nueva
+      línea.
+    </p>
   </body>
 </html>
