--- a/public/index.html
+++ b/public/index.html
@@ -10,19 +10,14 @@
       integrity="sha384-DQvkBjpPgn7RC31MCQoOeC9TI2kdqa4+BSgNMNj8v77fdC77Kj5zpWFTJaaAoMbC"
       crossorigin="anonymous"
     />
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.4/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YUe2LzesAfftltw+PEaao2tjU/QATaW/rOitAq67e0CT0Zi2VVRL0oC4+gAaeBKu"
-      crossorigin="anonymous"
-    ></script>
     <title>TC2005B</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">Navbar</a>
+    <nav class="navbar navbar-expand-lg custom-navbar">
+      <div class="container">
+        <a class="navbar-brand" href="#">TC2005B</a>
         <button
-          class="navbar-toggler"
+          class="navbar-toggler navbar-dark"
           type="button"
           data-bs-toggle="collapse"
           data-bs-target="#navbarNav"
@@ -33,54 +28,73 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
+          <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link" href="#">Login</a>
+              <a class="nav-link active" aria-current="page" href="#">Login</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="./pages/tags.html">Home</a>
             </li>
             <li class="nav-item">
-              <a
-                class="nav-link active"
-                aria-current="page"
-                href="./pages/profile.html"
-                >Profile</a
-              >
+              <a class="nav-link" href="./pages/profile.html">Profile</a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
 
-    <header><h1>Mi primera pagina HTML</h1></header>
-    <nav>
-      <ul>
-        <li>Login</li>
-        <li><a href="./pages/tags.html">Home</a></li>
-        <li><a href="./pages/profile.html">Profile</a></li>
-      </ul>
-    </nav>
+    <div class="container mt-5">
+      <header class="mb-4 text-center">
+        <h1>Mi primera página HTML</h1>
+      </header>
 
-    <h2>Formulario de Login</h2>
+      <div class="row justify-content-center">
+        <div class="col-md-6">
+          <div class="card shadow-sm">
+            <div class="card-body p-4">
+              <h2 class="card-title mb-4">Formulario de Login</h2>
 
-    <form action="">
-      <label for="">Username</label>
-      <input type="text" name="" id="" />
-      <label for="">Password</label>
-      <input type="password" name="" id="" />
-      <a href="./pages/tags.html"
-        ><input type="button" name="" id="" value="Login"
-      /></a>
-    </form>
+              <form>
+                <div class="mb-3">
+                  <label for="username" class="form-label">Username</label>
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="username"
+                    required
+                  />
+                </div>
+
+                <div class="mb-3">
+                  <label for="password" class="form-label">Password</label>
+                  <input
+                    type="password"
+                    class="form-control"
+                    id="password"
+                    required
+                  />
+                </div>
+
+                <div class="d-grid gap-2">
+                  <a href="./pages/tags.html" class="btn btn-primary login-btn"
+                    >Login</a
+                  >
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
       integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
       crossorigin="anonymous"
     ></script>
     <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.4/dist/js/bootstrap.min.js"
-      integrity="sha384-Re460s1NeyAhufAM5JwfIGWosokaQ7CH15ti6W5Y4wC/m4eJ5opJ2ivohxVM05Wd"
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.4/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YUe2LzesAfftltw+PEaao2tjU/QATaW/rOitAq67e0CT0Zi2VVRL0oC4+gAaeBKu"
       crossorigin="anonymous"
     ></script>
   </body>
