--- a/public/pages/profile.html
+++ b/public/pages/profile.html
@@ -10,15 +10,14 @@
       integrity="sha384-DQvkBjpPgn7RC31MCQoOeC9TI2kdqa4+BSgNMNj8v77fdC77Kj5zpWFTJaaAoMbC"
       crossorigin="anonymous"
     />
-    <!-- Eliminado el script duplicado de bootstrap.bundle.min.js de aquí -->
     <title>Profile</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">Navbar</a>
+    <nav class="navbar navbar-expand-lg custom-navbar">
+      <div class="container">
+        <a class="navbar-brand" href="#">TC2005B</a>
         <button
-          class="navbar-toggler"
+          class="navbar-toggler navbar-dark"
           type="button"
           data-bs-toggle="collapse"
           data-bs-target="#navbarNav"
@@ -29,10 +28,7 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" href="../index.html">Login</a>
-            </li>
+          <ul class="navbar-nav ms-auto">
             <li class="nav-item">
               <a class="nav-link" href="./tags.html">Home</a>
             </li>
@@ -51,7 +47,7 @@
               >
                 Account
               </a>
-              <ul class="dropdown-menu">
+              <ul class="dropdown-menu dropdown-menu-end">
                 <li>
                   <a class="dropdown-item" href="../index.html">LogOut</a>
                 </li>
@@ -61,13 +57,20 @@
         </div>
       </div>
     </nav>
-    <div>
+
+    <div class="container mt-4">
       <h2>Sobre Mí</h2>
       <p><strong>Nombre:</strong> Roberto Peiro</p>
       <p><strong>Edad:</strong> 20</p>
       <p><strong>Hobby:</strong> Salir con amigos y jugar videojuegos</p>
-      <img src="../images/imagen_rbd.JPG" alt="Foto de Perfil" width="300" />
+      <img
+        src="../images/imagen_rbd.JPG"
+        alt="Foto de Perfil"
+        width="300"
+        class="img-fluid rounded"
+      />
     </div>
+
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
       integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
