--- a/public/pages/tags.html
+++ b/public/pages/tags.html
@@ -13,11 +13,11 @@
     <title>Home</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">Navbar</a>
+    <nav class="navbar navbar-expand-lg custom-navbar">
+      <div class="container">
+        <a class="navbar-brand" href="#">TC2005B</a>
         <button
-          class="navbar-toggler"
+          class="navbar-toggler navbar-dark"
           type="button"
           data-bs-toggle="collapse"
           data-bs-target="#navbarNav"
@@ -28,10 +28,7 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" href="../index.html">Login</a>
-            </li>
+          <ul class="navbar-nav ms-auto">
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="#">Home</a>
             </li>
@@ -48,7 +45,7 @@
               >
                 Account
               </a>
-              <ul class="dropdown-menu">
+              <ul class="dropdown-menu dropdown-menu-end">
                 <li>
                   <a class="dropdown-item" href="../index.html">LogOut</a>
                 </li>
@@ -58,13 +55,17 @@
         </div>
       </div>
     </nav>
-    <p class="lorem">Este es un texto en <strong>negrita</strong>.</p>
-    <p>Aquí hay un superíndice: 2<sup>3</sup> = 8</p>
-    <p>Aquí hay un subíndice: H<sub>2</sub>O</p>
-    <p>
-      Vamos a agregar un salto de línea:<br />Este texto está en una nueva
-      línea.
-    </p>
+
+    <div class="container mt-4">
+      <p class="lorem">Este es un texto en <strong>negrita</strong>.</p>
+      <p>Aquí hay un superíndice: 2<sup>3</sup> = 8</p>
+      <p>Aquí hay un subíndice: H<sub>2</sub>O</p>
+      <p>
+        Vamos a agregar un salto de línea:<br />Este texto está en una nueva
+        línea.
+      </p>
+    </div>
+
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
       integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
