--- a/public/index.html
+++ b/public/index.html
@@ -13,11 +13,11 @@
     <title>TC2005B</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg custom-navbar">
-      <div class="container">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <div class="container-fluid">
         <a class="navbar-brand" href="#">TC2005B</a>
         <button
-          class="navbar-toggler navbar-dark"
+          class="navbar-toggler"
           type="button"
           data-bs-toggle="collapse"
           data-bs-target="#navbarNav"
@@ -28,7 +28,7 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav ms-auto">
+          <ul class="navbar-nav">
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="#">Login</a>
             </li>
@@ -43,55 +43,48 @@
       </div>
     </nav>
 
-    <div class="container mt-5">
-      <header class="mb-4 text-center">
-        <h1>Mi primera página HTML</h1>
-      </header>
-
+    <div class="container">
       <div class="row justify-content-center">
         <div class="col-md-6">
-          <div class="card shadow-sm">
-            <div class="card-body p-4">
-              <h2 class="card-title mb-4">Formulario de Login</h2>
+          <header class="text-center mt-4">
+            <h1>Mi primera pagina HTML</h1>
+          </header>
 
-              <form>
-                <div class="mb-3">
-                  <label for="username" class="form-label">Username</label>
-                  <input
-                    type="text"
-                    class="form-control"
-                    id="username"
-                    required
-                  />
-                </div>
+          <div class="login-form mt-4">
+            <h2>Formulario de Login</h2>
 
-                <div class="mb-3">
-                  <label for="password" class="form-label">Password</label>
-                  <input
-                    type="password"
-                    class="form-control"
-                    id="password"
-                    required
-                  />
-                </div>
+            <form action="">
+              <div class="mb-3">
+                <label for="username">Username</label>
+                <input
+                  type="text"
+                  name="username"
+                  id="username"
+                  class="form-control"
+                />
+              </div>
 
-                <div class="d-grid gap-2">
-                  <a href="./pages/tags.html" class="btn btn-primary login-btn"
-                    >Login</a
-                  >
-                </div>
-              </form>
-            </div>
+              <div class="mb-3">
+                <label for="password">Password</label>
+                <input
+                  type="password"
+                  name="password"
+                  id="password"
+                  class="form-control"
+                />
+              </div>
+
+              <div class="text-center">
+                <a href="./pages/tags.html">
+                  <input type="button" class="btn btn-primary" value="Login" />
+                </a>
+              </div>
+            </form>
           </div>
         </div>
       </div>
     </div>
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-      integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-      crossorigin="anonymous"
-    ></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.4/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YUe2LzesAfftltw+PEaao2tjU/QATaW/rOitAq67e0CT0Zi2VVRL0oC4+gAaeBKu"
