--- a/public/pages/profile.html
+++ b/public/pages/profile.html
@@ -13,11 +13,11 @@
     <title>Profile</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg custom-navbar">
-      <div class="container">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <div class="container-fluid">
         <a class="navbar-brand" href="#">TC2005B</a>
         <button
-          class="navbar-toggler navbar-dark"
+          class="navbar-toggler"
           type="button"
           data-bs-toggle="collapse"
           data-bs-target="#navbarNav"
@@ -28,7 +28,10 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav ms-auto">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="../index.html">Login</a>
+            </li>
             <li class="nav-item">
               <a class="nav-link" href="./tags.html">Home</a>
             </li>
@@ -47,7 +50,7 @@
               >
                 Account
               </a>
-              <ul class="dropdown-menu dropdown-menu-end">
+              <ul class="dropdown-menu">
                 <li>
                   <a class="dropdown-item" href="../index.html">LogOut</a>
                 </li>
@@ -63,19 +66,9 @@
       <p><strong>Nombre:</strong> Roberto Peiro</p>
       <p><strong>Edad:</strong> 20</p>
       <p><strong>Hobby:</strong> Salir con amigos y jugar videojuegos</p>
-      <img
-        src="../images/imagen_rbd.JPG"
-        alt="Foto de Perfil"
-        width="300"
-        class="img-fluid rounded"
-      />
+      <img src="../images/imagen_rbd.JPG" alt="Foto de Perfil" width="300" />
     </div>
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-      integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-      crossorigin="anonymous"
-    ></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.4/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YUe2LzesAfftltw+PEaao2tjU/QATaW/rOitAq67e0CT0Zi2VVRL0oC4+gAaeBKu"
