--- a/public/index.html
+++ b/public/index.html
@@ -75,9 +75,12 @@
               </div>
 
               <div class="text-center">
-                <a href="./pages/tags.html">
-                  <input type="button" class="btn btn-primary" value="Login" />
-                </a>
+                <input
+                  type="button"
+                  class="btn btn-primary"
+                  value="Login"
+                  id="btn-login"
+                />
               </div>
             </form>
           </div>
@@ -90,5 +93,6 @@
       integrity="sha384-YUe2LzesAfftltw+PEaao2tjU/QATaW/rOitAq67e0CT0Zi2VVRL0oC4+gAaeBKu"
       crossorigin="anonymous"
     ></script>
+    <script src="./scripts/index.js"></script>
   </body>
 </html>
