Add profile page enhancements with welcome button and session handling

--- a/public/pages/profile.html
+++ b/public/pages/profile.html
@@ -63,10 +63,15 @@
 
     <div class="container mt-4">
       <h2>Sobre Mí</h2>
-      <p><strong>Nombre:</strong> Roberto Peiro</p>
+      <p id="name"><strong>Nombre:</strong> Roberto Peiro</p>
       <p><strong>Edad:</strong> 20</p>
       <p><strong>Hobby:</strong> Salir con amigos y jugar videojuegos</p>
       <img src="../images/imagen_rbd.JPG" alt="Foto de Perfil" width="300" />
+    </div>
+    <div>
+      <button id="btn-profile" type="button" class="btn btn-success">
+        Bienvenido!
+      </button>
     </div>
 
     <script
@@ -74,5 +79,6 @@
       integrity="sha384-YUe2LzesAfftltw+PEaao2tjU/QATaW/rOitAq67e0CT0Zi2VVRL0oC4+gAaeBKu"
       crossorigin="anonymous"
     ></script>
+    <script src="../scripts/profile.js"></script>
   </body>
 </html>
