Refactor profile page layout to improve button container structure and styling

--- a/public/pages/profile.html
+++ b/public/pages/profile.html
@@ -67,11 +67,11 @@
       <p><strong>Edad:</strong> 20</p>
       <p><strong>Hobby:</strong> Salir con amigos y jugar videojuegos</p>
       <img src="../images/imagen_rbd.JPG" alt="Foto de Perfil" width="300" />
-    </div>
-    <div>
-      <button id="btn-profile" type="button" class="btn btn-success">
-        Bienvenido!
-      </button>
+      <div class="btn-container">
+        <button id="btn-profile" type="button" class="btn btn-success">
+          Bienvenido!
+        </button>
+      </div>
     </div>
 
     <script
