Add game page and common script for session handling and navigation

--- a/public/pages/profile.html
+++ b/public/pages/profile.html
@@ -40,6 +40,15 @@
                 >Profile</a
               >
             </li>
+            <li class="nav-item">
+              <a
+                class="nav-link active"
+                id="linkGame"
+                aria-current="page"
+                href="./game/index.html"
+                >game</a
+              >
+            </li>
             <li class="nav-item dropdown">
               <a
                 class="nav-link dropdown-toggle"
@@ -80,5 +89,6 @@
       crossorigin="anonymous"
     ></script>
     <script src="../scripts/profile.js"></script>
+    <script src="../scripts/common.js"></script>
   </body>
 </html>
